--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "notyf": "^3.10.0",
+    "sharp": "^0.33.5",
     "toastify-js": "^1.12.0"
   }
 }
