Creating and getting Maps

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^3.1.7",
     "notyf": "^3.10.0",
     "sharp": "^0.33.5",
-    "toastify-js": "^1.12.0"
+    "toastify-js": "^1.12.0",
+    "uuid": "^11.0.3"
   }
 }
