--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.10",
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
@@ -25,6 +26,11 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "notyf": "^3.10.0",
+    "passport": "^0.7.0",
+    "passport-apple": "^2.0.2",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-microsoft": "^2.1.0",
     "sharp": "^0.33.5",
     "toastify-js": "^1.12.0",
     "unzipper": "^0.12.3",
