--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment-timezone": "^0.5.47",
     "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.7",
     "notyf": "^3.10.0",
     "sharp": "^0.33.5",
