--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "fs-extra": "^11.2.0",
     "google-auth-library": "^9.15.1",
